css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
  --navbar-height: 70px;
  --faint-color: rgba(255, 255, 255, 0.04);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  overflow-x: hidden;
  scroll-behavior: auto;
}

body {
  font-family: 'Montserrat', sans-serif;
  background: #000;
  color: #fff;
}

a {
  text-decoration: none;
  color: inherit;
}

a:hover {
  color: inherit;
  text-decoration: none;
}

ul {
  list-style: none;
}

/* Utility */
.faint-watermark {
  position: absolute;
  color: var(--faint-color);
  font-size: 140px;
  line-height: 160px;
  font-weight: bold;
  text-align: center;
}

.heading-1 {
  margin-bottom: 0;
  font-size: 2rem;
  -webkit-text-fill-color: #000;
  -webkit-text-stroke-width: 0.5px;
  -webkit-text-stroke-color: #fff;
  font-weight: 800;
}

.margin-top-1 {
  margin-top: 70px;
}

.margin-top-2 {
  margin-top: 40px;
}

.btn-style {
  padding: 0.5rem 2rem;
  border: 1px solid #fff;
  background: transparent;
  color: #fff;
  transition: all 0.3s ease-in-out;
}

.btn-style:hover {
  background: #fff;
  color: #000;
}

/* Header Section */
header {
  background: url('../images/showcase-img.png') no-repeat left center/cover;
  color: #fff;
  height: 100vh;
  padding-top: 20px;
  position: relative;
}

header .container {
  position: relative;
}

.navbar {
  z-index: 999;
}

.navbar .nabar-brand {
  font-size: 30px;
}

.navbar-toggler {
  border: none;
  background: none;
}

.navbar-toggler:focus {
  outline: none;
}

.navbar-toggler .line1,
.navbar-toggler .line2,
.navbar-toggler .line3 {
  background: #fff;
  height: 2.5px;
  margin: 3.5px;
}

.navbar-toggler .line1 {
  width: 25px;
}

.navbar-toggler .line2 {
  width: 15px;
}

.navbar-toggler .line3 {
  width: 20px;
}

.nav-item {
  margin: 0 15px;
}

.nav-item .nav-link {
  padding: 10px 15px !important;
  transition: all 0.3s ease-in;
}

.nav-item .nav-link:hover,
.nav-item.active {
  color: #9dbdb2;
}

.showcase {
  height: calc(100vh - 76px);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 20px;
  text-align: center;
}

.showcase .photographer-name {
  font-size: 3.5rem;
}

header > a {
  position: absolute;
  bottom: 35px;
  height: 50px;
  width: 50px;
  left: 50%;
  transform: translateX(-50%);
  border: 1px solid #fff;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  animation: animated-arrow 0.8s cubic-bezier(0.1, 0.7, 1, 0.1) infinite;
}

@keyframes animated-arrow {
  from {
    transform: translateY(-5px);
  }
  to {
    transform: translateY(5px);
  }
}

header .faint-watermark {
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}

/* About Me Section */
.about-me {
  text-align: center;
  padding: 70px 0;
  position: relative;
}

.about-me-content {
  width: 90vw;
  max-width: 700px;
  margin: auto;
}

.about-me p {
  line-height: 2rem;
}

.about-me .faint-watermark {
  top: 50%;
  transform: translateY(-50%);
}

/* Accolades section */
.accolades img {
  width: 40px;
}

.accolades .number {
  font-size: 2rem;
}

/* Portfolio Section */
.portfolio {
  position: relative;
}

.portfolio #isotope-filters button {
  color: #ccc;
  border: 0;
}

.portfolio #isotope-filters button.active,
.portfolio #isotope-filters button:hover {
  padding-bottom: 5px;
  border-bottom: 2px solid #9dbdb2;
  color: #9dbdb2;
  outline: 0;
  border-radius: 0;
}

.portfolio .gallery img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.portfolio .gallery {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(4, 18vw);
  grid-gap: 15px;
}

.portfolio-filters .col-sm-6,
.portfolio-filters .col-md-4 {
  padding: 0 0.5rem;
}

.portfolio-filters img {
  width: 100%;
  height: 100%;
  margin-bottom: 1rem;
  transition: all 0.3s;
}

.portfolio-filters img:hover {
  transform: scale(1.01);
}

.portfolio-filters img.lg {
  height: 510px;
}

.portfolio .faint-watermark {
  top: 50%;
  transform: translateY(-50%);
  right: 0;
  font-size: 100px;
  line-height: 100px;
}

/* Contact Section */
.contact img {
  width: 30px;
  height: 30px;
}

.contact form input {
  width: 100%;
  border: none;
  border-bottom: 1px solid #fff;
  background: transparent;
  margin-bottom: 30px;
  font-size: 0.8rem;
  color: #fff;
  padding: 0.4rem 0;
}

.contact form input:focus {
  outline: none;
}

.contact form button {
  font-size: 0.8rem;
  background: #9dbdb2;
}

.contact form button:hover {
  opacity: 0.7;
  background: #9dbdb2;
  color: #fff;
}

/* Footer Section */
.footer .horizontal-rule {
  width: 100%;
  height: 1px;
  background: #fff;
}

.footer .social-icons li {
  margin-left: 20px;
}

/* Media Queries */
@media (min-width: 992px) and (max-width: 1199px) {
  .portfolio-filters img.lg {
    height: 427px;
  }

  .lifestyle {
    margin-top: 0rem;
  }
}

@media (max-width: 991px) {
  /* Header */
  .nav-item {
    margin: 0;
  }

  .nav-item .nav-link {
    padding: 10px !important;
  }

  .portfolio-filters img.lg {
    height: 320px;
  }

  .lifestyle {
    margin-top: 0;
    margin-bottom: 0;
  }
}

